src/test/ui/span/issue-27522.stderr
error[E0307]: invalid method receiver type: &SomeType
  --> $DIR/issue-27522.rs:16:22
   |
LL |     fn handler(self: &SomeType); //~ ERROR invalid method receiver type
   |                      ^^^^^^^^^
   |
   = note: type must be `Self` or a type that dereferences to it
   = help: consider changing to `self`, `&self`, `&mut self`, or `self: Box<Self>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0307`.
